# WebServer

./: .gitignore  CMakeLists.txt  README.md
include/: HttpRequest.h  Logger.h  Server.h  Socket.h
src/: HttpRequest.cpp  main.cpp
